deploy/djangoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: djangoapp
  name: djangoapp
  namespace: edu-reverent-mestorf
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30291
  selector:
    app: djangoapp
